--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
-	"header":["title","date","desc"],
-	"links":[{
-		"url":"http://0.0.0.0:1234/index.html",
-		"container":"li[class=content]",
-		"grab":[
-			{"css":"h2[class=title]", "content":""},
-			{"css":"time", "content":"datetime"},
-			{"css":"p[class=summary]", "content":""}]
+    "header":["NAME","LINK","INNER"],
+	"links":[
+		{
+			"url":"http://0.0.0.0:1234/index.html",
+			"container":"div[class=contact]",
+			"grab":[
+				{"css":"p[class=name]", "contents":[""]},
+				{"css":"a", "contents":["href",""]}
+			]
 		}
 	]
 }
