--- a/config.json
+++ b/config.json
@@ -5,9 +5,8 @@
 			"url":["http://0.0.0.0:1234/index.html"],
 			"container":"div[class=contact]",
 			"grab":[
-				{"css":"p", "contents":[""]},
-				{"css":"a", "contents":["href",""]},
-				{"xpath":"//p[@class=name]/text()"}
+				{"css":"p", "contents":""},
+				{"css":"a", "contents":["href",""]}
 			]
 		}
 	]
